# PDF-Generation-SSRF

./: Dockerfile  README.md  app.py  business-card-template.html  business-card-template.html.bak  card-details.json  navigalactic  payload.json  pyproject.toml  requirements.txt  roadmap.todo
templates/: create_card.html  index.html
