[tool.poetry]
name = "pdf-ssrf-ctf"
version = "0.1.0"
description = "PDF Generation SSRF - CTF"
authors = ["Bharath"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
